fixed centering on mobile screens and small fixes

--- a/src/styles/design.scss
+++ b/src/styles/design.scss
@@ -55,6 +55,7 @@
     @media (max-width: $mobileScreens) {
       font-size: 37px;
       position: static;
+      align-self: baseline;
     }
 
     &_nowrap {
