--- a/src/styles/features.scss
+++ b/src/styles/features.scss
@@ -8,6 +8,7 @@
     flex-direction: column;
     align-items: center;
     height: 550px;
+    padding-right: 15px;
   }
 
   &__background-grey {
@@ -57,7 +58,7 @@
 
     @media (max-width: $mobileScreens) {
       position: relative;
-      right: 41px;
+      right: 55px;
       padding-bottom: 30px;
       margin-top: 30px;
       font-size: 37px;
@@ -74,7 +75,7 @@
     }
 
     @media (max-width: $mobileScreens) {
-      left: 4px;
+      left: 0;
     }
   }
 
