--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -18,7 +18,6 @@
     transition: transform $transitionTime;
 
     &:hover {
-      transform: scale(1.05);
       cursor: pointer;
     }
   }
