--- a/src/styles/promo.scss
+++ b/src/styles/promo.scss
@@ -41,8 +41,12 @@
     cursor: pointer;
     transition: transform $transitionTime;
 
-    @media (max-width: $tabletsScreens) {
+    &:hover {
+      transform: scale(1.05);
       background: url(../images/icons/tablet-play.svg) center/contain no-repeat;
+    }
+
+    @media (max-width: $tabletsScreens) {
       height: 190px;
       width: 190px;
     }
@@ -50,10 +54,6 @@
     @media (max-width: $mobileScreens) {
       height: 108px;
       width: 108px;
-    }
-
-    &:hover {
-      transform: scale(1.1);
     }
   }
 }
