--- a/src/styles/technology.scss
+++ b/src/styles/technology.scss
@@ -3,6 +3,10 @@
   padding-right: 0;
   overflow: hidden;
 
+  @media (max-width: $mobileScreens) {
+    padding-right: 15px;
+  }
+
   &__title {
     @include subtitleFont;
     position: relative;
@@ -10,7 +14,7 @@
 
     @media (max-width: $mobileScreens) {
       font-size: 37px;
-      left: -12px;
+      left: -22px;
       text-align: center;
     }
   }
